#15 - 대출 신청 서류 매핑 기능 구현
'applicationId' 를 이용하여 누구의 서류인지 구별가능